[tool.poetry]
name = "covid-tests-traffic"
version = "0.1.0"
description = "Python toolkit for extracting traffic to covidtests.gov"
authors = ["Nick Hand <nicholas.adam.hand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
GitPython = "^3.1.27"
altair = "^4.2.0"
jupyterlab = "^3.2.9"
retrolab = "^0.3.19"
ipython = "^8.0.1"
git-history = "^0.6.1"
loguru = "^0.6.0"
rich = "^11.2.0"
matplotlib = "^3.5.1"
black = "^22.1.0"
isort = "^5.10.1"
jupyterlab-code-formatter = "^1.4.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
covid-tests-traffic = "covid_tests_traffic.cli:cli"

